[package]
name = "your_literals"
version = "0.1.0"
edition = "2024"
categories = ["no-std"]
description = "This crate provides the ability to define constants and their corresponding macros using literals."
exclude = ["Justfile"]
keywords = ["const", "constant", "declarative", "declarative-macro", "macro", "literal"]
license = "MIT"
repository = "https://github.com/okkmnone/your_literals"

[features]
default = []
std = []

[dependencies]
clean-macro-docs = "1.0.2"
paste = "1.0.15"
